kubernetes/media/readarr/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: readarr
  name: readarr
  namespace: readarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      nodeSelector:
        servertype: pc
      containers:
        - env:
            - name: TZ
              value: Europe/Helsinki
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
          image: linuxserver/readarr:0.3.16-nightly
          name: readarr
          ports:
            - containerPort: 8787
              name: http
          volumeMounts:
            - mountPath: /config
              name: readarr-pvc
            - mountPath: /media
              name: media-nfs
      volumes:
        - name: readarr-pvc
          persistentVolumeClaim:
            claimName: readarr-pvc
        - name: media-nfs
          nfs:
            server: 192.168.5.11
            path: /tank/media
