kubernetes/media/readarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: readarr
spec:
  ports:
    - port: 8787
      protocol: TCP
      targetPort: http
  selector:
    app: readarr
  sessionAffinity: ClientIP
  type: ClusterIP
