kubernetes/media/readarr/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr
  namespace: readarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`readarr.lan.juusoleinonen.fi`)
      priority: 10
      services:
        - name: readarr
          port: 8787
  tls:
    secretName: readarr-certificate
